# 30dayMakeCppServer

./: README.md  day01-从一个最简单的socket开始.md  day01-写在前面的话.md  day02-不要放过任何一个错误.md  day02-从一个最简单的socket开始.md  day03-高并发还得用epoll.md  day04-来看看我们的第一个类.md  day05-epoll高级用法-Channel登场.md  day05-epoll高级用法.md  day06-服务器与事件驱动核心类登场.md  day07-为我们的服务器添加一个Acceptor.md  day08-一切皆是类，连TCP连接也不例外.md  day09-缓冲区-大作用.md  day10-加入线程池到服务器.md  day11-完善服务器，找bug，写测试.md  day11-完善线程池，加入一个简单的测试程序.md  day11-完善线程池，服务器成型，写测试程序.md  day12-将服务器改写为主从Reactor多线程模式.md  day12-改写线程模式为one_loop_per_thread.md  day13-C++工程化、代码分析、性能优化.md  day13-C++工程化、性能优化.md  day14-支持业务逻辑自定义、完善Connection类.md  day15-macOS、FreeBSD支持.md  day15-macOS支持、完善业务逻辑自定义.md  day16-完善业务逻辑自定义.md  day16-重构核心库、使用智能指针.md  macOS支持.md  readme
code/day01/: Makefile  client.cpp  server.cpp
code/day02/: Makefile  client.cpp  server.cpp  util.cpp
code/day03/: Makefile  server.cpp
code/day04/: Epoll.cpp  Epoll.h  Makefile  server.cpp
code/day05/: Channel.cpp  Channel.h  Epoll.cpp  Makefile  server.cpp
code/day06/: EventLoop.h  InetAddress.cpp  Makefile  client.cpp  server.cpp
code/day06/src/: Channel.cpp  EventLoop.cpp  Server.h  Socket.cpp  Socket.h  util.cpp
code/day07/: Acceptor.h  Epoll.cpp  Epoll.h  Makefile  server.cpp  util.h
code/day07/src/: Acceptor.cpp  Channel.cpp  InetAddress.h  Server.cpp  Server.h  Socket.cpp
code/day08/: Makefile  client.cpp  server.cpp
code/day08/src/: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  EventLoop.h  Server.cpp  Socket.cpp  Socket.h
code/day09/: Makefile  client.cpp  server.cpp
code/day09/src/: Acceptor.cpp  Buffer.cpp  Connection.cpp  Connection.h  Epoll.cpp  EventLoop.cpp  Server.cpp  Socket.cpp
code/day10/: Makefile  ThreadPollTest.cpp
code/day10/src/: Acceptor.h  Buffer.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  Socket.h  ThreadPoll.cpp  ThreadPoll.h  ThreadPool.cpp  ThreadPool.h
code/day11/: Makefile  multipleClient.cpp  test.cpp
code/day11/src/: Acceptor.cpp  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.h  EventLoop.cpp  EventLoop.h  InetAddress.h  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadPoll.cpp  ThreadPoll.h  ThreadPool.h
code/day12/: Makefile  ThreadPoolTest.cpp  client.cpp  server  test  test.cpp
code/day12/src/: Acceptor.cpp  Acceptor.h  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  EventLoop.cpp  EventLoop.h  InetAddress.cpp  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h
code/day13/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  ThreadPoolTest.cpp  client.cpp  server.cpp  test.cpp
code/day13/build_support/: run_clang_tidy_extra.py
code/day13/src/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadPool.cpp  util.cpp  util.h
code/day13/src/include/: Acceptor.h  Buffer.h  Channel.h  Connection.h  Epoll.h  EventLoop.h  Macros.h  Server.h  Socket.h  ThreadPool.h  util.h
code/day13/test/: CMakeLists.txt  ThreadPoolTest.cpp  client_test.cpp  multiple_client.cpp  server.cpp  single_client.cpp
code/day14/: CMakeLists.txt
code/day14/build_support/: cpplint.py  run_clang_format.py
code/day14/src/: Acceptor.cpp  Buffer.cpp  CMakeLists.txt  Connection.cpp  Epoll.cpp  EventLoop.cpp  Server.cpp  Socket.cpp
code/day14/src/include/: Channel.h  Connection.h  Epoll.h  EventLoop.h  Macros.h  Server.h  Socket.h  ThreadPool.h
code/day14/test/: multiple_client.cpp  server.cpp  single_client.cpp  thread_test.cpp
code/day15/: .gitignore  CMakeLists.txt
code/day15/build_support/: run_clang_tidy.py
code/day15/src/: Acceptor.cpp  Channel.cpp  Connection.cpp  EventLoop.cpp  Poller.cpp  Server.cpp  Socket.cpp  util.cpp
code/day15/src/include/: Buffer.h  Channel.h  Connection.h  EventLoop.h  Exception.h  Macros.h  Poller.h  Server.h  Socket.h  ThreadPool.h  pine.h
code/day15/test/: chat_client.cpp  chat_server.cpp  echo_client.cpp  echo_server.cpp  http_server.cpp  server.cpp
code/day16/: CMakeLists.txt
code/day16/src/: Acceptor.cpp  Buffer.cpp  CMakeLists.txt  Channel.cpp  Connection.cpp  EventLoop.cpp  Poller.cpp  Socket.cpp  TcpServer.cpp
code/day16/src/include/: Acceptor.h  Buffer.h  Channel.h  Connection.h  EventLoop.h  Log.h  Poller.h  SignalHandler.h  Socket.h  TcpServer.h  ThreadPool.h  common.h  pine.h
code/day16/test/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  echo_client.cpp  echo_clients.cpp  echo_server.cpp  http_server.cpp
